--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,4 +14,5 @@
  *= require_self
  */
 // $primary: #c11; # changing variable values
-@import "bootstrap";
+@import 'bootstrap';
+@import 'custom';
