--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -25,7 +25,7 @@
       <% end %>
     </div>
 
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mb-3">
       <div class="col-auto">
         <%= link_to '[ Cancel and return to articles listing ]', articles_path, class: "text-info" %>
       </div>
