--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -26,7 +26,7 @@
 
         <div class="row justify-content-center">
           <div class="col-auto">
-            <%= f.submit class: "btn btn-outline-light btn-lg" %>
+            <%= f.submit "Sign up", class: "btn btn-outline-light btn-lg" %>
           </div>
         </div>
       <% end %>
