--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,7 +3,8 @@
 
 <div class="flickr_pagination">
   <%= will_paginate @articles, :container => false %>
-  <div class="page_info">
-    <%= render 'article' %>
-  </div>
+</div>
+<%= render 'article' %>
+<div class="flickr_pagination mb-4">
+  <%= will_paginate @articles, :container => false %>
 </div>
